v3/crates/engine/tests/snapshots/execution__common__rowsets_execute__models__select_many__field_arguments_user.snap
---
source: crates/engine/tests/common.rs
expression: rowsets
---
{
  "Ok": [
    {
      "rows": [
        {
          "id": 1,
          "name": "Queen Mary University of London"
        },
        {
          "id": 2,
          "name": "Chalmers University of Technology"
        },
        {
          "id": 3,
          "name": "University of Nowhere"
        }
      ]
    }
  ]
}
