v3/crates/engine/tests/snapshots/execution__common__rowsets_execute__models__select_many__simple_select.snap
---
source: crates/engine/tests/common.rs
expression: rowsets
---
[
  {
    "rows": [
      {
        "author_id": 1,
        "first_name": "Peter",
        "last_name": "Landin"
      },
      {
        "author_id": 2,
        "first_name": "John",
        "last_name": "Hughes"
      }
    ]
  }
]
